More handling of directory/element access rights and clean up code.
Signed-off-by: AAJELLAL <ali.ajellalod@gmail.com>